tests/singleton/singleton.exp
Error ---------------------------------------------------------- boolean.js:8:34

Cannot call `veryOptimistic` with `false` bound to `isThisAwesome` because
boolean is incompatible with boolean literal `true`.

Error: boolean.js:8
  8: var y : boolean = veryOptimistic(false); // error
                                      ^^^^^ Cannot call `veryOptimistic` with `false` bound to `isThisAwesome` because boolean [1] is incompatible with boolean literal `true` [2].
  References:
    8: var y : boolean = veryOptimistic(false); // error
                                        ^^^^^ [1]: boolean
    3: function veryOptimistic(isThisAwesome: true): boolean {
                                              ^^^^ [2]: boolean literal `true`

Error --------------------------------------------------------- boolean.js:15:35

Cannot call `veryPessimistic` with `false` bound to `isThisAwesome` because
boolean is incompatible with boolean literal `true`.

Error: boolean.js:15
 15: var y : boolean = veryPessimistic(false); // error
                                       ^^^^^ Cannot call `veryPessimistic` with `false` bound to `isThisAwesome` because boolean [1] is incompatible with boolean literal `true` [2].
  References:
   15: var y : boolean = veryPessimistic(false); // error
                                         ^^^^^ [1]: boolean
   10: function veryPessimistic(isThisAwesome: true): boolean {
                                               ^^^^ [2]: boolean literal `true`

Error --------------------------------------------------------- boolean.js:21:12

Cannot return `x` because boolean literal `true` is incompatible with boolean
literal `false`.

Error: boolean.js:21
 21:     return x;
                ^ Cannot return `x` because boolean literal `true` [1] is incompatible with boolean literal `false` [2].
  References:
   19: function bar(x: MyOwnBooleanLOL): false {
                       ^^^^^^^^^^^^^^^ [1]: boolean literal `true`
   19: function bar(x: MyOwnBooleanLOL): false {
                                         ^^^^^ [2]: boolean literal `false`

Error --------------------------------------------------------- boolean.js:23:12

Cannot return `!x` because boolean literal `true` is incompatible with boolean
literal `false`.

Error: boolean.js:23
 23:     return !x;
                ^^ Cannot return `!x` because boolean literal `true` [1] is incompatible with boolean literal `false` [2].
  References:
   23:     return !x;
                  ^^ [1]: boolean literal `true`
   19: function bar(x: MyOwnBooleanLOL): false {
                                         ^^^^^ [2]: boolean literal `false`

Error: boolean.js:29
 29: bar(1); // error
         ^ number. This type is incompatible with the expected param type of
 19: function bar(x: MyOwnBooleanLOL): false {
                     ^^^^^^^^^^^^^^^ union: boolean literal `true` | boolean literal `false`
  Member 1:
   17: type MyOwnBooleanLOL = true | false
                              ^^^^ boolean literal `true`
  Error:
   29: bar(1); // error
           ^ number. This type is incompatible with
   17: type MyOwnBooleanLOL = true | false
                              ^^^^ boolean literal `true`
  Member 2:
   17: type MyOwnBooleanLOL = true | false
                                     ^^^^^ boolean literal `false`
  Error:
   29: bar(1); // error
           ^ number. This type is incompatible with
   17: type MyOwnBooleanLOL = true | false
                                     ^^^^^ boolean literal `false`

Error ----------------------------------------------------------- number.js:8:12

Cannot call `highlander` with `2` bound to `howMany` because number is
incompatible with number literal `1`.

Error: number.js:8
  8: highlander(2); // error
                ^ Cannot call `highlander` with `2` bound to `howMany` because number [1] is incompatible with number literal `1` [2].
  References:
    8: highlander(2); // error
                  ^ [1]: number
    3: function highlander(howMany: 1): number {
                                    ^ [2]: number literal `1`

Error ----------------------------------------------------------- number.js:19:5

Cannot call `bar` with `3` bound to `num` because number is incompatible with
number enum.

Error: number.js:19
 19: bar(3); // error
         ^ Cannot call `bar` with `3` bound to `num` because number [1] is incompatible with number enum [2].
  References:
   19: bar(3); // error
           ^ [1]: number
   13: function bar(num: Foo): number {
                         ^^^ [2]: number enum


Found 7 errors
